[package]
name = "interface-explorer"
version = "0.1.0"
authors = ["Bruno Tavares <connect+github@bltavares.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "*"

# multicast-socket = { path = "../multicast-socket" }
multicast-socket = { git = "https://github.com/bltavares/multicast-socket" }